# NOESIS-2

./: .coveragerc  .dockerignore  .env.dev-elk  .env.dev.sample  .env.docker  .env.example  .gitattributes  .gitignore  .prettierrc  .tmp.schemas.txt  AGENTS.md  CLAUDE.md  Dockerfile  Gemini.md  ID_CONSISTENCY_REVIEW_PROMPT.md  ID_SCOPE_TRACING_INVENTUR.md  LICENCE  MODEL_ROUTING.local.yaml.sample  MODEL_ROUTING.yaml  Makefile  OPTION_A_CONTRACT_IMPACT.md  OPTION_A_IMPLEMENTATION_PLAN.md  OPTION_A_SOURCE_CODE_ANALYSIS.md  PYDANTIC_TODO.md  README.md  SCOPE_CONTEXT_REVIEW.md  case_id_type_review.md  check_dev_table.py  check_template.py  check_uuid.py  collection_id_review.md  conftest.py  debug_blob_parser.py  debug_collections.py  debug_doc_lookup.py  debug_imports.py  debug_out.txt  debug_output.txt  debug_pipeline_state.py  debug_schema.py  (+70 more)
ai-core/: AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
ai-core/apps/api/: main.py  resp_headers.py
ai-core/apps/api/middleware/: guards.py
ai-core/apps/api/routes/: answer.py  assess.py  draft.py  ingest.py  precheck.py  solve.py
ai-core/apps/infra/: config.py  ledger.py  logging.py  object_store.py  pii.py  rate_limit.py
ai-core/apps/llm/: MODEL_ROUTING.yaml  client.py  routing.py
ai-core/apps/prompts/: __init__.py
ai-core/apps/rag/: filters.py  schemas.py  vector_client.py
ai-core/apps/workers/: celery_app.py
ai-core/docker/: api.Dockerfile  docker-compose.yml  worker.Dockerfile
ai-core/tests/e2e/: test_answer_min.py
ai-core/tests/unit/: test_filters.py  test_llm_client.py  test_log_masking.py
(+1413 files in other folders)
