[project]
name = "ai-core"
version = "0.1.0"
description = "AI Core placeholder"
requires-python = ">=3.11"
dependencies = ["celery", "pydantic", "redis", "fastapi", "uvicorn"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps"]
